# rover_simulation

./: .gitignore
install/: local_setup.sh  setup.sh
install/rover_control/share/ament_index/resource_index/package_run_dependencies/: rover_control
install/rover_control/share/rover_control/: package.sh  package.xml
install/rover_description/share/rover_description/: local_setup.sh  package.sh  package.xml
install/rover_gazebo/share/rover_gazebo/: package.sh
log/: latest_build
src/rover_control/: CMakeLists.txt  package.xml
src/rover_control/config/: diff_drive_control.yaml  effort_control.yaml  rover_control.yaml
src/rover_control/launch/: rover_control.py
src/rover_description/: CMakeLists.txt
src/rover_description/meshes/: wheel.stl
src/rover_description/urdf/: backup.urdf  diff_drive_rover.xacro.urdf  effort_rover.xacro.urdf  rover.gazebo  rover.urdf  rover.xacro.urdf
src/rover_description/urdf/backup/: backup.urdf
src/rover_gazebo/: CMakeLists.txt  package.xml
src/rover_gazebo/launch/: diff_drive_rover.launch.py  effort_rover.launch.py  rover_gazebo.launch.py  rover_gazebo.py
src/rover_gazebo/launch/scaled_world/: diff_drive_scaled_gazebo.launch.py  effort_scaled.launch.py
src/rover_gazebo/models/real_stairs/: model.config  model.sdf
src/rover_gazebo/models/scaled_stairs/: model.config  model.sdf
src/rover_gazebo/models/stairs/: model.sdf
src/rover_gazebo/models/stairs/stairs/: model.sdf
src/rover_gazebo/src/: effort_rover.cpp  forward.cpp
src/rover_gazebo/worlds/: rover_world.world  scaled_world.world
(+1 files in other folders)
